--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
         <h1>Harry Shinster</h1>
-        <img src="./harryshin.jpg" alt="">
-        <h3>Hello, I am Harry Shin and I am a faggit </h3>
-
+        <img src="./harryshin.jpg" alt="" id="profilepic">
+        <h3>Hello, I am Harry Shin and I am a faggit</h3> </br>
+        <h3>Here is a picture of my faggit family</h3>
+        <img src="./IMG_8816.jpg" alt="" class="familypic">
+        <img src="./IMG_8817.jpg" alt="" class="familypic">
 </body>
 </html>
