--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="./harryshin.jpg" alt="" id="profilepic">
         <h3>Hello, I am Harry Shin and I am a faggit</h3> </br>
         <h3>Here is a picture of my faggit family</h3>
-        <img src="./IMG_8816.jpg" alt="" class="familypic">
-        <img src="./IMG_8817.jpg" alt="" class="familypic">
+        <img src="./IMG_8816.JPG" alt="" class="familypic">
+        <img src="./IMG_8817.JPG" alt="" class="familypic">
 </body>
 </html>
