--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
         <ul>
-            <li><a href="pornhub.com">About</a></li>
+            <li><a href="www.pornhub.com">About</a></li>
             <li><a href="./index.html">Home</a></li>
             
         </ul>
