--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <h1>Harry Shinster</h1>
         <a href="https://www.facebook.com/sirloc.holmes"><img src="./harryshin.jpg" alt="" id="profilepic"></a>
-        <img src="./naruto.jpg" alt="">
+        <img src="./naruto.jpg" alt="" id="naruto">
         <img src="./i.png" alt="" id="seahawks">
         
         <h3>Hello, I am Harry Shin and I am a awesum</h3> </br>
