--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         <h1>Harry Shinster</h1>
         <a href="https://www.facebook.com/sirloc.holmes"><img src="./harryshin.jpg" alt="" id="profilepic"></a>
-        <img src="./naruto.jpg" alt="" id="naruto">
-        <img src="./i.png" alt="" id="seahawks">
+        <a href="https://www.facebook.com/kevin.li.52"><img src="./naruto.jpg" alt="" id="naruto"></a>
+        <a href="https://www.facebook.com/EJKabeejay"><img src="./i.png" alt="" id="seahawks"></a>
         
         <h3>Hello, I am Harry Shin and I am a awesum</h3> </br>
         <h3>Here is a picture of my awsum family</h3>
