--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h3>Hello, I am Harry Shin and I am a awesum</h3> </br>
         <h3>Here is a picture of my awsum family</h3>
         <img src="./IMG_8816.JPG" alt="" class="familypic">
-        <img src="./IMG_8817.JPG" alt="" class="familypic">
+        <img src="./mike.jpg" alt="" class="familypic">
         
 </body>
 </html>
