--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         <h3>Here is a picture of my awsum family</h3>
         <img src="./IMG_8816.JPG" alt="" class="familypic">
         <img src="./mike.jpg" alt="" class="familypic">
-        
+        <img src="./jake.jpg" alt="" class="familypic">
 </body>
 </html>
