--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://www.facebook.com/EJKabeejay"><img src="./i.png" alt="" id="seahawks"></a>
         
         <h3>Hello, I am Harry Shin and I am a awesum</h3> </br>
-        <h3>Here is a picture of my awsum family</h3>
+        <h3>Here is a picture of my awsum family and friends</h3>
         <img src="./IMG_8816.JPG" alt="" class="familypic">
         <img src="./mike.jpg" alt="" class="familypic">
         <img src="./jake.jpg" alt="" class="familypic">
