--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
   
         <ul>
-            <li><a href="https://www.facebook.com/mahlan.oung">About</a></li>
+            <li><a href="https://www.facebook.com/mahlan.oung" target="_blank">About</a></li>
             <li><a href="./index.html">Home</a></li>
             
         </ul>
 
         <h1>Harry Shinster</h1>
-        <a href="https://www.facebook.com/sirloc.holmes"><img src="./harryshin.jpg" alt="" id="profilepic"></a>
-        <a href="https://www.facebook.com/kevin.li.52"><img src="./naruto.jpg" alt="" id="naruto"></a>
-        <a href="https://www.facebook.com/EJKabeejay"><img src="./i.png" alt="" id="seahawks"></a>
+        <a href="https://www.facebook.com/sirloc.holmes" target="_blank"><img src="./harryshin.jpg" alt="" id="profilepic"></a>
+        <a href="https://www.facebook.com/kevin.li.52" target="_blank"><img src="./naruto.jpg" alt="" id="naruto"></a>
+        <a href="https://www.facebook.com/EJKabeejay" target="_blank"><img src="./i.png" alt="" id="seahawks"></a>
         
         <h3>Hello, I am Harry Shin and I am a awesum</h3> </br>
         <h3>Here is a picture of my awsum family and friends</h3>
